--- a/react-app/src/components/styles.css
+++ b/react-app/src/components/styles.css
@@ -1,5 +1,46 @@
-.bloc-logo{
+.container{
     position: relative;
+}
+
+.bloc-logo{
+    position: absolute;
     width: 100%;
-    height: 100vh
+    height: 100vh;
+}
+
+.map{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: center;
+    position: relative;
+    top: 20px;
+}
+
+.rectangle {
+        z-index:2;
+        position:absolute;
+        /* display: inline-block; */
+        width: 65px;
+        height: 65px;
+        outline-color: black;
+        outline-style: solid;
+    }
+
+.table1{
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    position: absolute;
+    top: 0;
+    
+}
+
+.table2{
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
