--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,5 +40,8 @@
   align-items: center;
   display: flex;
   margin: auto;
-  
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
